# catdash

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.tailscale.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: publish.yml
catdash/: __init__.py  collector.py  config.py  control.py  db.py  main.py
scripts/: control_probe.py  probe.py  probe_feeder.py  probe_time_observe.py
tailscale/: serve.json
tests/: test_feeder_schedule.py  test_stream_collect.py  test_visit_durations.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  app.css  main.js
web/src/lib/: ActivityFilter.svelte  ActivityTable.svelte  Cards.svelte  Chart.svelte  Controls.svelte  FeederChart.svelte  FeederControls.svelte  HabitsChart.svelte  LitterRobotControls.svelte  Modal.svelte  Robots.svelte  UsageChart.svelte  WeightChart.svelte  WeightFoodChart.svelte  api.js  echarts.js  persist.js  theme.svelte.js
