[project]
name = "catdash"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "pylitterbot>=2025.4.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]

# Use the local pylitterbot checkout (branch feeder-schedule-write) for the
# feeder schedule write support until it lands upstream.
[tool.uv.sources]
pylitterbot = { path = "../pylitterbot", editable = true }
