[project]
name = "catdash"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "pylitterbot>=2025.4.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]

# Feeder schedule-write support from the fork until it lands upstream.
# NOTE: before deploying, create/push github.com/chrisrico/pylitterbot @
# feature-schedule-write, then run `uv lock` to pin it (the lockfile still
# references the local checkout until then).
[tool.uv.sources]
pylitterbot = { git = "https://github.com/chrisrico/pylitterbot", branch = "feature-schedule-write" }
